# tracetool

./: .arcconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  appveyor.yml  backtrace.cpp  backtrace.h  backtrace_win.cpp  backtrace_win.h  build.cmd  build.sh  cibuild.py  circle.yml  config-cmake.h.in  configuration.cpp  configuration.h  configuration_unix.cpp  configuration_win.cpp  core.cpp  crashhandler_win.cpp  errorlog.cpp  errorlog.h  filter.cpp  filter.h  getcurrentthreadid.h  getcurrentthreadid_unix.cpp  getcurrentthreadid_win.cpp  install_requirements.sh  networkoutput_unix.cpp  networkoutput_unix.h  networkoutput_win.cpp  networkoutput_win.h  output.cpp  output.h  qt_macosx_universal_configure.txt  runcppcheck.py  (+17 more)
cmake/modules/: Findtracelib.cmake
config-tests/: execinfo.c
convertdb/: CMakeLists.txt  getopt.cpp  getopt.h  main.cpp
core/: CMakeLists.txt  backtrace.cpp  backtrace.h  backtrace_unix.cpp  backtrace_win.cpp  configuration.cpp  configuration.h  configuration_unix.cpp  configuration_win.cpp  core.cpp  crashhandler.cpp  crashhandler.h  crashhandler_unix.cpp  crashhandler_win.cpp  dlldefs.h  errorlog.cpp  filemodificationmonitor.cpp  filemodificationmonitor.h  filemodificationmonitor_unix.cpp  filemodificationmonitor_unix.h  filemodificationmonitor_win.cpp  filemodificationmonitor_win.h  filter.cpp  filter.h  getcurrentthreadid.h  getcurrentthreadid_unix.cpp  getcurrentthreadid_win.cpp  mutex.h  mutex_unix.cpp  mutex_win.cpp  networkoutput.cpp  networkoutput_unix.cpp  networkoutput_unix.h  networkoutput_win.cpp  networkoutput_win.h  output.cpp  output.h  serializer.cpp  serializer.h  shutdownnotifier.cpp  (+11 more)
doc/: architecture.dox  attached.odg  examples.dox  live-monitoring.odg  main.dox  post-analysis.odg  tracelib_xml_config.dox
doc-examples/: hello.cpp  hello_instrumented.cpp  tracelib.xml
docker_image/: Dockerfile  README.md
examples/: CMakeLists.txt
examples/addressbook/: CMakeLists.txt  addressbook.qrc  addressbook.ts  dialog.cpp  dialog.h  lineedit.cpp  lineedit.h  main.cpp  mainwindow.cpp  mainwindow.h  tracelib.xml
examples/sampleapp/: CMakeLists.txt  acme.cpp  acme.h  person.cpp  person.h  sampleapp.cpp  tracelib.xml
examples/tracegen/: CMakeLists.txt  tracegen.cpp  tracelib.xml  traceview.cpp
gui/: CMakeLists.txt  Info.plist.in  applicationtable.cpp  applicationtable.h  columnsform.cpp  columnsform.h  columnsform.ui  columnsinfo.cpp  columnsinfo.h  configeditor.cpp  configeditor.h  configeditor.ui  configuration.cpp  configuration.h  entryfilter.cpp  entryfilter.h  entryitemmodel.cpp  entryitemmodel.h  filterform.cpp  filterform.h  filterform.ui  fixedheaderview.cpp  fixedheaderview.h  gui.qrc  gui.ts  jobobject.cpp  jobobject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modeltest.cpp  restorableobject.h  searchwidget.cpp  searchwidget.h  settings.cpp  settings.h  settingsform.cpp  settingsform.h  settingsform.ui  (+6 more)
hooklib/: CMakeLists.txt  backtrace.cpp  backtrace.h  backtrace_unix.cpp  backtrace_win.cpp  configuration.cpp  configuration.h  configuration_unix.cpp  configuration_win.cpp  crashhandler.h  crashhandler_unix.cpp  crashhandler_win.cpp  dlldefs.h  errorlog.cpp  errorlog.h  eventthread_unix.cpp  eventthread_unix.h  filemodificationmonitor.cpp  filemodificationmonitor.h  filemodificationmonitor_unix.cpp  filemodificationmonitor_unix.h  filemodificationmonitor_win.cpp  filemodificationmonitor_win.h  filter.cpp  filter.h  getcurrentthreadid.h  getcurrentthreadid_unix.cpp  getcurrentthreadid_win.cpp  log.cpp  log.h  mutex.h  mutex_unix.cpp  mutex_win.cpp  networkoutput.cpp  networkoutput_unix.cpp  output.cpp  output.h  serializer.cpp  serializer.h  shutdownnotifier.cpp  (+14 more)
server/: CMakeLists.txt  database.cpp  database.h  databasefeeder.cpp  databasefeeder.h  datagramtypes.h  layout.sql  lru_cache.h  main.cpp  server.cpp  server.h  server.ts  xmlcontenthandler.cpp  xmlcontenthandler.h
shippedexamples/: CMakeLists.txt
shippedexamples/addressbook/: CMakeLists.txt  MyAddresses.adr  mainwindow.h  tracelib.xml
shippedexamples/sampleapp/: CMakeLists.txt  acme.cpp  acme.h  person.h
tests/: CMakeLists.txt  compiletest.cpp  compiletest.py  test_eventthreadunix.cpp  test_filter.cpp  test_guiconf.cpp  test_info.cpp  test_processname.cpp  test_session.cpp  testconf.xml
trace2xml/: CMakeLists.txt  main.cpp
xml2trace/: CMakeLists.txt  main.cpp
